<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_height="match_parent" android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/form_back">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="#2e2c5c"
        android:letterSpacing="0.04"
        android:lineSpacingExtra="6.3sp"
        android:text="@string/enter_your_details"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="76dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textColor="#2e2c5c"
        android:letterSpacing="0.04"
        android:lineSpacingExtra="4.6sp"
        android:text="@string/text_title"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="36dp"
        android:textColorHint="#2e2c5c"
        app:errorTextAppearance="@style/TextInputStyle.Error"
        app:hintTextAppearance="@style/TextInputStyle.Hint">

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="#de000000"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="8sp"
            android:hint="@string/name"
            android:backgroundTint="#2e2c5c"
            android:textColorHint="#2e2c5c"
            android:inputType="textCapSentences"
            android:maxLength="30"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilBirthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="36dp"
        android:textColorHint="#2e2c5c"
        app:errorTextAppearance="@style/TextInputStyle.Error"
        app:hintTextAppearance="@style/TextInputStyle.Hint"
        app:helperTextTextAppearance="@style/TextInputStyle.Hint">

        <EditText
            android:id="@+id/edtBirthdate"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:fontFamily="@font/roboto"
            android:hint="@string/birth"
            android:editable="false"
            android:maxLength="50"
            android:backgroundTint="#2e2c5c"
            android:textColor="#d9424242"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="32dp"
        android:layout_gravity="center_horizontal"
        android:textColor="#8f2e2c5c"
        android:letterSpacing="0.04"
        android:lineSpacingExtra="4sp"
        android:text="@string/bottom_text"
        />
</LinearLayout>

    <ImageView
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="100dp"
        android:id="@+id/ivNext"/>

</FrameLayout>