<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="50dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/img_no_connection"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#2e2c5c"
            android:letterSpacing="0.06"
            android:lineSpacingExtra="5.1sp"
            android:text="@string/no_internet_connection"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="#8f2e2c5c"
            android:letterSpacing="0.02"
            android:lineSpacingExtra="10sp"
            android:layout_marginTop="6dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/check_your_internet_connection"
            />

    </LinearLayout>


    <TextView
        android:id="@+id/tvReload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="#2e2c5c"
        android:letterSpacing="0.06"
        android:lineSpacingExtra="4sp"
        android:text="@string/try_again"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:padding="16dp"
        />

</FrameLayout>