<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:background="@color/main_violet">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:letterSpacing="0.06"
            android:lineSpacingExtra="4sp"
            android:text="@string/general_mood"
            android:textColor="#ffffff"
            android:textSize="14sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:drawableLeft="@drawable/ic_sex"
                android:drawablePadding="8dp"
                android:letterSpacing="0.06"
                android:lineSpacingExtra="4sp"
                android:text="@string/sex"
                android:textColor="#ffffff"
                android:textSize="14sp" />

            <com.wsoteam.horoscopes.view.RatingView
                android:id="@+id/rvSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="18dp" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:drawableLeft="@drawable/ic_hustle"
                android:drawablePadding="8dp"
                android:letterSpacing="0.06"
                android:lineSpacingExtra="4sp"
                android:text="@string/hustle"
                android:textColor="#ffffff"
                android:textSize="14sp" />

            <com.wsoteam.horoscopes.view.RatingView
                android:id="@+id/rvHustle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="18dp" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:drawableLeft="@drawable/ic_vibe"
                android:drawablePadding="8dp"
                android:letterSpacing="0.06"
                android:lineSpacingExtra="4sp"
                android:text="@string/vibe"
                android:textColor="#ffffff"
                android:textSize="14sp" />

            <com.wsoteam.horoscopes.view.RatingView
                android:id="@+id/rvVibe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="18dp" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="37dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:drawableLeft="@drawable/ic_success"
                android:drawablePadding="8dp"
                android:letterSpacing="0.06"
                android:lineSpacingExtra="4sp"
                android:text="@string/success"
                android:textColor="#ffffff"
                android:textSize="14sp" />

            <com.wsoteam.horoscopes.view.RatingView
                android:id="@+id/rvSuccess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="18dp" />

        </FrameLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/ivBlur"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent"
        android:elevation="3dp" />


    <LinearLayout
        android:id="@+id/llLock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="4dp"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/img_crown_prem" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="9dp"
            android:gravity="center_horizontal"
            android:letterSpacing="0.04"
            android:lineSpacingExtra="5.1sp"
            android:text="@string/get_a_premium_subscription"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:letterSpacing="0.06"
            android:lineSpacingExtra="3.2sp"
            android:text="@string/full_information_is_available_by_subscription"
            android:textColor="#ffffff"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnLockPrem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/shape_lock_prem"
            android:letterSpacing="0.06"
            android:lineSpacingExtra="4.6sp"
            android:paddingStart="46dp"
            android:paddingRight="46dp"
            android:text="@string/get_access"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="16sp" />

    </LinearLayout>
</FrameLayout>